Fixed styles and basic icons for main activity.

--- a/OutlookAndroidEngineerChallenge/app/src/main/res/values/strings.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">OutlookAndroidEngineerChallenge</string>
-    <string name="action_settings">Settings</string>
+
+    <!-- Main Activity -->
+    <string name="oaec_main_title">Main</string>
+
+    <!-- Main Activity Menus -->
+    <string name="oaec_action_set_view">Set View</string>
+    <string name="oaec_action_settings">Settings</string>
 </resources>
