--- a/OutlookAndroidEngineerChallenge/app/src/main/res/values/strings.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="oaec_agenda_no_event">No Event</string>
 
     <!-- Agenda Event ViewHolder -->
-    <string name="oaec_agenda_event_default_date">00:00 AM</string>
+    <string name="oaec_agenda_event_default_date">00:00</string>
     <string name="oaec_agenda_event_date_all_day">All day</string>
     <string name="oaec_agenda_event_duration_all_day">1d</string>
     <string name="oaec_agenda_event_duration">%1$dh</string>
