--- a/OutlookAndroidEngineerChallenge/app/src/main/res/values/strings.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!-- Main Activity -->
     <string name="oaec_main_title">Main</string>
+    <string name="oaec_main_allow_location_access">Do you allow app to access location?</string>
 
     <!-- Main Activity Menus -->
     <string name="oaec_action_set_view">Set View</string>
@@ -10,6 +11,12 @@
 
     <!-- Agenda View -->
     <string name="oaec_agenda_no_event">No Event</string>
+
+    <!-- Agenda Weather -->
+    <string name="oaec_agenda_weather_morning_label">Morning</string>
+    <string name="oaec_agenda_weather_afternoon_label">Afternoon</string>
+    <string name="oaec_agenda_weather_evening_label">Evening</string>
+    <string name="oaec_agenda_weather_temperature">%1$.1fº</string>
 
     <!-- Agenda Event ViewHolder -->
     <string name="oaec_agenda_event_default_date">00:00</string>
